--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
               <p>Web ini dibuat eksklusif untuk orang paling spesial di duniaa :D </p>
             </div>
           </div>
+
           <div class="slide slide3">
+            <div class="slide-text">
+              <h1>Selamat hari Seno Sedunia !!</h1> <br>
+              <p>Web ini dibuat eksklusif untuk orang paling spesial di duniaa :D </p>
+            </div>
+          </div>
+
+          <div class="slide slide4">
+            <div class="slide-text">
+              <h1>Selamat hari Seno Sedunia !!</h1> <br>
+              <p>Web ini dibuat eksklusif untuk orang paling spesial di duniaa :D </p>
+            </div>
+          </div>
+
+          <div class="slide slide5">
             <div class="slide-text">
               <h1>Selamat hari Seno Sedunia !!</h1> <br>
               <p>Web ini dibuat eksklusif untuk orang paling spesial di duniaa :D </p>
@@ -37,7 +52,7 @@
 
     <content>
       <div class="content">
-        <h1> Here is Some content you should check it</h1>
+        <h1 style="color: #c9befffc;text-shadow: 3px 2px 5px  #000000af;"> Here is Some content you should check out</h1>
         <div class="boxes">
 
           <button class="button-box" type="button" onclick="switchview('love-letter')">
@@ -66,7 +81,7 @@
         </div>
 
         <div class="section" style="display: none;" id="love-letter">
-          <h1>view words for Seno</h1>
+          <h1 class="color: #372d89">view words for Seno</h1>
           <div class="love-letter">
             <p> kamu tau? klaim bahwa bahasa indonesia itu miskin ada benarnya juga. karena untuk mendefinisikan rasa aman nyaman, disayang, dan tidak pernah mau beranjak pergi terinyata bisa disederhana kan menjadi: bersama mu. <br>
               karena sampai kapan pun, kamu adalah langit yang kucintai cerahnya, mendungnya, hujannya, badainya, senjanya, pelanginya, dan segala yang ada pada dirimu. wajar saja jika aku mengagumi mu, jika disaat tuhan ingin menjelaskan apa arti keindahan, ia menciptakan kamu. <br><br>  
@@ -79,7 +94,7 @@
 
 
         <div class="section" style="display: none;" id="facts">
-          <h1>Some fact</h1>
+          <h1 style="color: #372d89">Some fact</h1>
           <div class="love-letter">
               <p>Kamu tau? ketika seseorang jatuh cinta, mereka cenderung meniru perilaku atau ekspresi wajah pasangan mereka, bahkan tanpa disadari. Ini disebut sebagai "mimikri emosional" dan dapat memperkuat ikatan antara pasangan.</p> <br>
               <p>Kamu tau? saat kita berpelukan dengan seseorang yang kita cintai, otak kita melepaskan hormon oksitosin, yang dapat meningkatkan perasaan kebahagiaan, keintiman, dan koneksi emosional.</p> <br>
@@ -91,7 +106,7 @@
         </div>
 
 
-        <h1 style="margin-top: 60px;">Dear Seno</h1>
+        <h1 style="color: #372d89; margin-top:10%;">Dear Seno</h1>
         <div class="note">
           <p>Dear Seno, happy birthday for the 19th times! aku tau ngga mudah untuk bisa sampai dititik ini, banyak hal terjadi yang mungkin tidak selalu sesuai rencana, banyak harapan yang akhirnya terpaksa dilepas, atau justru hal baik yang datang tanpa direncanakan.
             aku melihat sedikit banyak kehidupan kamu selama 1 tahun ini, dan mendengar samar-samar apa yang kamu lalui dulu. i've never seen this perfect kind of man before. for all the struggle you've been through, you are still people's sunshine.
